# OtterLineUp

./: .gitignore  Cargo.toml  package.json  tsconfig.json
ci/: secrets_smoke.yaml
config/: chains.yml  defaults.yml  exec.yml  risk.yml
config/providers/: azuro.yml  sx.yml
crates/azuro_client/: Cargo.toml
crates/azuro_client/src/: error.rs  lib.rs
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs  net_margin.rs  odds_converter.rs
crates/monitoring/: Cargo.toml
crates/normalization/: Cargo.toml
crates/normalization/src/: dedup.rs  lib.rs  market_uid.rs
crates/normalization/tests/: market_uid.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: config.rs  execution_service.rs  lib.rs
crates/orchestrator/tests/: auto_pause.rs  config_manager.rs
crates/sx_client/: Cargo.toml
crates/sx_client/src/: lib.rs
crates/tools/: Cargo.toml
data/: market_uid_seed.csv
docs/: CHATGPT.txt  perimetre_markets.md
docs/compliance/: audit_checklist.md  register.md
docs/mapping/: market_uid.md
env/: prod.env.yaml
infra/vault/: policies.hcl
kanban/: TAKEBOARD.yml
kanban/backlog/: B0_takeboard_missing.md  BLOCKER_takeboard_missing.md  E10_S1_orchestrateur_execution.md  E10_S2_gestion_residuelle.md  E10_S3_monitoring.md  E10_S4_canari_cash_only.md  E11_S1_pipeline_profiling.md  E11_S2_build_skylake.md  E11_S3_numeric_path.md  E11_S4_runtime_scaling.md  E11_S5_simd_vectorisation.md  E11_S6_parallel_batches.md  E1_S1_verrouiller_perimetre.md  E2_S1_gestion_cles.md  E3_S1_politique_sizing.md  E4_S1_conformite.md  E5_S1_client_sx.md  E6_S1_client_azuro.md  E7_S1_qos_commun.md  E8_S1_market_uid.md  E8_S2_dicos.md  E8_S3_rulepacks.md  E9_S1_convertisseurs.md  E9_S2_slippage_amm.md  E9_S3_arb_engine.md  README.md
logs/: secrets_audit.json
ops/alerts/: secrets.yaml
ops/incidents/: void_template.md
runbooks/: secrets_rotation.md  void_escalation.md
scripts/: vault_smoke.sh
src/: index.ts
src/clients/: azuroClient.ts  sxClient.ts
src/core/: configManager.ts  marketUid.ts  odds.ts  riskPolicy.ts  runtimeRegistry.ts  vaultClient.ts
src/ops/: complianceGuards.ts  metrics.ts
tests/: complianceGuards.test.ts  marketUid.test.ts  metrics.test.ts  odds.test.ts  riskPolicy.test.ts  runtimeRegistry.test.ts  sxClient.test.ts  vaultClient.test.ts
