[workspace]
members = [
    "crates/normalization",
    "crates/monitoring",
    "crates/sx_client",
    "crates/azuro_client",
    "crates/execution",
]
members = ["crates/execution", "crates/tools"]
members = ["crates/execution", "crates/azuro_client"]
members = [
    "crates/orchestrator",
    "crates/normalization",
    "crates/monitoring",
    "crates/sx_client",
    "crates/azuro_client",
    "crates/execution",
]
resolver = "2"
