[workspace]
members = ["crates/monitoring", "crates/sx_client", "crates/azuro_client", "crates/execution"]
members = [
    "crates/azuro_client",
    "crates/execution",
    "crates/monitoring",
    "crates/normalization",
    "crates/orchestrator",
    "crates/sx_client",
    "crates/tools",
]
resolver = "2"
